reorganized the grammar a bit, still able to count vertex and face totals

--- a/lex_yacc_testing/Makefile
+++ b/lex_yacc_testing/Makefile
@@ -2,7 +2,7 @@ plytojs: y.tab.c lex.yy.c
 	gcc -Wall -o plytojs y.tab.c lex.yy.c -ll
 
 y.tab.c: plytojs.y
-	yacc -d plytojs.y
+	yacc -Wconflicts-sr -d plytojs.y
 
 lex.yy.c: plytojs.l
 	lex plytojs.l
